# image-reconstruction

./: .gitignore  pyproject.toml
docs/: README.md  USAGE_GUIDE.md
image-reconstruction/: RIGOROUS_MLP_CHANGES.md
image-reconstruction/img_ana/: .gitignore  COMPLETE.md  INDEX.md  README.md  START_HERE.txt  SUMMARY.txt  USAGE_GUIDE.md  __init__.py  check_output.py  create_animations.py  debug_transformation.py  event_path.py  hull_fast_optim.py  reconstruction.py  replot_existing_data.py  run_reconstruction.py  test_all_angles.py  test_flipud.py  test_plot_fix.py  verify_scattering.py  visualize_scattering.py
image-reconstruction/img_ana/core/: __init__.py  geometry.py  physics.py
image-reconstruction/img_ana/docs/: QUICK_START.md  REFACTORING_SUMMARY.md  __init__.py  img_ana_structure.txt
image-reconstruction/img_ana/examples/: __init__.py  example_using_modules.py
image-reconstruction/img_ana/processing/: __init__.py  projection.py  trajectory.py
image-reconstruction/img_ana/tests/: __init__.py  test_modules.py
image-reconstruction/img_ana/utils/: __init__.py  helpers.py  timer.py
image-reconstruction/img_ana/visualization/: __init__.py  plotting.py
pct_reconstruction/: __init__.py  reconstruction.py
pct_reconstruction/core/: __init__.py  config.py  geometry.py  physics.py
pct_reconstruction/processing/: __init__.py  data_loader.py  projection.py  trajectory.py
pct_reconstruction/visualization/: __init__.py  plotting.py
scripts/: create_animations.py  event_path.py  run_reconstruction.py
