[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pct_reconstruction"
version = "1.0.0"
description = "Proton CT Image Reconstruction using Hull Algorithms"
readme = "docs/README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "torch",
    "pandas",
    "matplotlib",
    "plotly",
    "scikit-image",
    "imageio",
    "Pillow",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
include = ["pct_reconstruction*"]
